✨ クラス化してインスタンスを作成

--- a/index3.html
+++ b/index3.html
@@ -8,9 +8,25 @@
 
 <body>
   
+  <div class="accordion" id="js-faq">
+    <p href="" class="accordion-trigger">
+      AAAAAAAAAA
+    </p>
+    <div class="accordion-contents">
+      BBBBBBBBBB
+    </div>
+
+    <p href="" class="accordion-trigger">
+      CCCCCCCCCC
+    </p>
+    <div class="accordion-contents">
+      DDDDDDDDDD
+    </div>
+  </div>
+
   <div class="accordion" id="js-accordion">
     <a href="" class="accordion-trigger">
-      AAAAAAAAAA
+      あああああああ 
     </a>
     <div class="accordion-contents">
       BBBBBBBBBB
